Issue #15610: The PyImport_ImportModuleEx macro now calls PyImport_ImportModuleLevel() with a 'level' of 0 instead of -1 as the latter is no longer a valid value.

Also added a versionchanged note for PyImport_ImportModuleLevel() just
in case people don't make the connection between changes to
__import__() and this C function.